extensions/client_cpp/hl2ss_ulm.h

//------------------------------------------------------------------------------
// Stream Configuration
//------------------------------------------------------------------------------

constexpr
uint32_t extended_audio_device_mixer_mode(uint32_t mixer_mode, uint32_t device)
{
    uint32_t const DEVICE_BASE = 0x00000004;
    return mixer_mode | (DEVICE_BASE * (device + 1));
}
//------------------------------------------------------------------------------
// Decoders
//------------------------------------------------------------------------------

struct rm_vlc_metadata
{
    uint64_t sensor_ticks;
    uint64_t exposure;
    uint32_t gain;
    uint32_t _reserved;
};
struct rm_depth_ahat_metadata
{
    uint64_t sensor_ticks;
};
struct rm_depth_longthrow_metadata
{
    uint64_t sensor_ticks;
};
struct pv_metadata
{
    vector_2 f;
    vector_2 c;
    uint64_t exposure_time;
    uint64x2 exposure_compensation;
    uint32_t lens_position;
    uint32_t focus_state;
    uint32_t iso_speed;
    uint32_t white_balance;
    vector_2 iso_gains;
    vector_3 white_balance_gains;
    uint32_t _reserved;
};
//------------------------------------------------------------------------------
// Unpacking
//------------------------------------------------------------------------------

struct rm_imu_sample
{
    uint64_t sensor_timestamp;
    uint64_t timestamp;
    float x;
    float y;
    float z;
    float temperature;
};
struct si_frame
{
    uint32_t valid;
    si_head_pose head_pose;
    ray eye_ray;
    si_hand_joint left_hand[26];
    si_hand_joint right_hand[26];
};
struct eet_frame
{
    uint32_t _reserved;
    ray combined_ray;
    ray left_ray;
    ray right_ray;
    float left_openness;
    float right_openness;
    float vergence_distance;
    uint32_t valid;
};
struct map_rm_vlc
{
    uint8_t* image;
    rm_vlc_metadata* metadata;
};
struct map_rm_depth_ahat
{
    uint16_t* depth;
    uint16_t* ab;
    rm_depth_ahat_metadata* metadata;
};
struct map_rm_depth_longthrow
{
    uint16_t* depth;
    uint16_t* ab;
    rm_depth_longthrow_metadata* metadata;
};
struct map_rm_imu
{
    hl2ss::rm_imu_sample* samples;
};
struct map_pv
{
    uint8_t* image;
    pv_metadata* metadata;
};
struct map_microphone_raw
{
    int16_t* samples;
};
struct map_microphone_aac
{
    float* samples;
};
struct map_si
{
    hl2ss::si_frame* tracking;
};
struct map_eet
{
    hl2ss::eet_frame* tracking;
};
struct map_extended_audio_raw
{
    int16_t* samples;
};
struct map_extended_audio_aac
{
    float* samples;
};
constexpr
map_rm_vlc unpack_rm_vlc(uint8_t* payload)
{
    return { payload, (rm_vlc_metadata*)(payload + parameters_rm_vlc::PIXELS) };
}
constexpr
map_rm_depth_ahat unpack_rm_depth_ahat(uint8_t* payload)
{
    return { (uint16_t*)(payload), (uint16_t*)(payload + (parameters_rm_depth_ahat::PIXELS * sizeof(uint16_t))), (rm_depth_ahat_metadata*)(payload + (2 * parameters_rm_depth_ahat::PIXELS * sizeof(uint16_t))) };
}
constexpr
map_rm_depth_longthrow unpack_rm_depth_longthrow(uint8_t* payload)
{
    return { (uint16_t*)(payload), (uint16_t*)(payload + (parameters_rm_depth_longthrow::PIXELS * sizeof(uint16_t))), (rm_depth_longthrow_metadata*)(payload + (2 * parameters_rm_depth_longthrow::PIXELS * sizeof(uint16_t))) };
}
constexpr
map_rm_imu unpack_rm_imu(uint8_t* payload)
{
    return { (rm_imu_sample*)payload };
}
constexpr
map_pv unpack_pv(uint8_t* payload, uint32_t size)
{
    return { payload, (pv_metadata*)(payload + size - sizeof(pv_metadata)) };
}
constexpr
map_microphone_raw unpack_microphone_raw(uint8_t* payload)
{
    return { (int16_t*)payload };
}
constexpr
map_microphone_aac unpack_microphone_aac(uint8_t* payload)
{
    return { (float*)payload };
}
constexpr
map_si unpack_si(uint8_t* payload)
{
    return { (si_frame*)payload };
}
constexpr
map_eet unpack_eet(uint8_t* payload)
{
    return { (eet_frame*)payload };
}
constexpr
map_extended_audio_raw unpack_extended_audio_raw(uint8_t* payload)
{
    return { (int16_t*)payload };
}
constexpr
map_extended_audio_aac unpack_extended_audio_aac(uint8_t* payload)
{
    return { (float*)payload };
}
struct packet
{
    int64_t frame_stamp;
    uint64_t timestamp;
    uint32_t sz_payload;
    int32_t status;
    uint8_t* payload;
    matrix_4x4* pose;
};
//-----------------------------------------------------------------------------
// Grab
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* get_by_index(void* source, int64_t frame_stamp, hl2ss::ulm::packet& packet);
HL2SS_CLIENT_IMPORT
void* get_by_timestamp(void* source, uint64_t timestamp, int32_t time_preference, int32_t tiebreak_right, hl2ss::ulm::packet& packet);
//-----------------------------------------------------------------------------
// Control
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t start_subsystem_pv(char const* host, uint16_t port, uint8_t enable_mrc=false, uint8_t hologram_composition=true, uint8_t recording_indicator=false, uint8_t video_stabilization=false, uint8_t blank_protected=false, uint8_t show_mesh=false, uint8_t shared=false, float global_opacity=0.9f, float output_width=0.0f, float output_height=0.0f, uint32_t video_stabilization_length=0, uint32_t hologram_perspective=hl2ss::hologram_perspective::PV);
HL2SS_CLIENT_IMPORT
int32_t stop_subsystem_pv(char const* host, uint16_t port);
HL2SS_INLINE
void start_subsystem_pv(char const* host, uint16_t port, uint8_t enable_mrc=false, uint8_t hologram_composition=true, uint8_t recording_indicator=false, uint8_t video_stabilization=false, uint8_t blank_protected=false, uint8_t show_mesh=false, uint8_t shared=false, float global_opacity=0.9f, float output_width=0.0f, float output_height=0.0f, uint32_t video_stabilization_length=0, uint32_t hologram_perspective=hl2ss::hologram_perspective::PV)
{
    handle::check_result(hl2ss::ulm::start_subsystem_pv(host, port, enable_mrc, hologram_composition, recording_indicator, video_stabilization, blank_protected, show_mesh, shared, global_opacity, output_width, output_height, video_stabilization_length, hologram_perspective));
}
HL2SS_INLINE
void stop_subsystem_pv(char const* host, uint16_t port)
{
    handle::check_result(hl2ss::ulm::stop_subsystem_pv(host, port));
}