extensions/client_unity/Assets/Scripts/hl2ss_ulm.cs


        [DllImport("hl2ss_ulm")]
        public static extern void open_microphone(string host, ushort port, ulong chunk = hl2ss.chunk_size.MICROPHONE, byte profile = hl2ss.audio_profile.AAC_24000, byte level = hl2ss.aac_level.L2, ulong buffer_size = 500);

        [DllImport("hl2ss_ulm")]
        public static extern void open_si(string host, ushort port, ulong chunk = hl2ss.chunk_size.SPATIAL_INPUT, ulong buffer_size = 300);

        [DllImport("hl2ss_ulm")]
        public static extern void open_eet(string host, ushort port, ulong chunk = hl2ss.chunk_size.EXTENDED_EYE_TRACKER, byte framerate = hl2ss.eet_framerate.FPS_30, ulong buffer_size = 900);

        [DllImport("hl2ss_ulm")]
        public static extern void open_extended_audio(string host, ushort port, ulong chunk = hl2ss.chunk_size.EXTENDED_AUDIO, uint mixer_mode = hl2ss.mixer_mode.BOTH, float loopback_gain = 1.0f, float microphone_gain = 1.0f, byte profile = hl2ss.audio_profile.AAC_24000, byte level = hl2ss.aac_level.L2, ulong buffer_size = 500);

        [DllImport("hl2ss_ulm")]
        public static extern void open_rc(string host, ushort port);

        [DllImport("hl2ss_ulm")]
        public static extern void open_sm(string host, ushort port);

        [DllImport("hl2ss_ulm")]
        public static extern void open_su(string host, ushort port);

        [DllImport("hl2ss_ulm")]
        public static extern void open_vi(string host, ushort port);

        [DllImport("hl2ss_ulm")]
        public static extern void open_umq(string host, ushort port);

        [DllImport("hl2ss_ulm")]
        public static extern void open_gmq(string host, ushort port);

        //-----------------------------------------------------------------------------
        // Close
        //-----------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern void close(ushort port);

        //-----------------------------------------------------------------------------
        // Grab
        //-----------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int get_by_index(ushort port, ref long frame_stamp, ref int status, ref IntPtr frame, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int get_by_timestamp(ushort port, ulong timestamp, int time_preference, int tiebreak_right, ref long frame_stamp, ref int status, ref IntPtr frame, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern void release_frame(IntPtr frame);

        [DllImport("hl2ss_ulm")]
        public static extern int unpack_frame(IntPtr frame, ref ulong timestamp, ref uint payload_size, ref IntPtr payload_data, ref IntPtr pose_data);

        //------------------------------------------------------------------------------
        // Unpacking
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_rm_vlc(IntPtr payload, ref IntPtr image);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_rm_depth_ahat(IntPtr payload, ref IntPtr depth, ref IntPtr ab);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_rm_depth_longthrow(IntPtr payload, ref IntPtr depth, ref IntPtr ab);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_rm_imu(IntPtr payload, ref IntPtr samples);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_pv(IntPtr payload, ulong size, ref IntPtr image, ref IntPtr intrinsics);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_microphone_raw(IntPtr payload, ref IntPtr samples);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_microphone_aac(IntPtr payload, ref IntPtr samples);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_si(IntPtr payload, ref IntPtr si);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_eet(IntPtr payload, ref IntPtr eet);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_extended_audio_raw(IntPtr payload, ref IntPtr samples);

        [DllImport("hl2ss_ulm")]
        public static extern void unpack_extended_audio_aac(IntPtr payload, ref IntPtr samples);

        //------------------------------------------------------------------------------
        // Stream Configuration
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern uint extended_audio_device_mixer_mode(uint mixer_mode, uint device);

        //-----------------------------------------------------------------------------
        // Control
        //-----------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int start_subsystem_pv(string host, ushort port, byte enable_mrc = 0, byte hologram_composition = 1, byte recording_indicator = 0, byte video_stabilization = 0, byte blank_protected = 0, byte show_mesh = 0, byte shared = 0, float global_opacity = 0.9f, float output_width = 0.0f, float output_height = 0.0f, uint video_stabilization_length = 0, uint hologram_perspective = hl2ss.hologram_perspective.PV, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int stop_subsystem_pv(string host, ushort port, uint error_size = 0, byte[] error_data = null);

        //-----------------------------------------------------------------------------
        // Calibration
        //-----------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int download_calibration_rm_vlc(string host, ushort port, IntPtr uv2xy, IntPtr extrinsics, IntPtr undistort_map, IntPtr intrinsics, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int download_calibration_rm_depth_ahat(string host, ushort port, IntPtr uv2xy, IntPtr extrinsics, IntPtr scale, IntPtr alias, IntPtr undistort_map, IntPtr intrinsics, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int download_calibration_rm_depth_longthrow(string host, ushort port, IntPtr uv2xy, IntPtr extrinsics, IntPtr scale, IntPtr undistort_map, IntPtr intrinsics, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int download_calibration_rm_imu(string host, ushort port, IntPtr extrinsics, uint error_size = 0, byte[] error_data = null);

        [DllImport("hl2ss_ulm")]
        public static extern int download_calibration_pv(string host, ushort port, ushort width, ushort height, byte framerate, IntPtr focal_length, IntPtr principal_point, IntPtr radial_distortion, IntPtr tangential_distortion, IntPtr projection, IntPtr extrinsics, uint error_size = 0, byte[] error_data = null);

        //-----------------------------------------------------------------------------
        // IPC
        //-----------------------------------------------------------------------------
    }
}
